--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,8 +5,24 @@
 			"type": "npm",
 			"script": "serve",
 			"problemMatcher": [],
-			"label": "npm: serve",
+			"label": "yarn: serve",
 			"detail": "docusaurus serve"
+		},
+		{
+			"type": "npm",
+			"script": "install",
+			"group": "build",
+			"problemMatcher": [],
+			"label": "yarn: install",
+			"detail": "install dependencies from package"
+		},
+		{
+			"type": "npm",
+			"script": "build",
+			"group": "build",
+			"problemMatcher": [],
+			"label": "yarn: build",
+			"detail": "NODE_OPTIONS=--openssl-legacy-provider docusaurus build"
 		}
 	]
 }
