--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "espanso",
   "version": "0.0.0",
   "private": true,
+  "main": "",
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider docusaurus build",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "@biomejs/biome": "2.1.3"
+    "@biomejs/biome": "2.1.3",
+    "cross-env": "^10.0.0"
   }
 }
